# advent-of-code-2022

./: pyproject.toml  runner.py
days/: day1.py  day2.py  day3.py
file_reader/: reader.py
input/: test_a.txt
tests/days/: test_day1.py  test_day2.py  test_day3.py
tests/file_reader/: test_reader.py
