[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Advent Of Code 2022"
authors = ["Josh Stephens <bsdtux@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
isort = "^5.10.1"
black = "^22.10.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
